fixed scolling not working on mobile device

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@ height: 100%;
 
   background:var(--color-background);
   font-family: Arial, Helvetica, sans-serif;
-  overflow-y:hidden;
+  overflow-x:hidden;
 }
 
 
